Closed Bug 1733354 Opened 3 years ago Closed 3 years ago

[win] Profile Manager is no longer readable with Dark OS theme

Categories

(Core :: Layout, defect)

Firefox 94
Desktop
Windows 10
defect

Tracking

()

VERIFIED FIXED
94 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- unaffected
firefox92 --- unaffected
firefox93 --- unaffected
firefox94 + fixed
firefox95 --- verified

People

(Reporter: atrif, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

Attached image image.png

Affected versions

  • 94.0a1 (20210929155324)

Affected platforms

  • Windows 10 x64

Preconditions

  • Dark OS theme

Steps to reproduce

  1. Open the latest Nightly profile manager or Create New Profile from about:profiles page.

Expected result

  • Profile Manager is displayed as expected.

Actual result

  • White background on buttons and white text inside Profile Manager.

Regression range

Notes

  • Attached a screenshot.

Morgan, can you please have a look? Thank you!

Has Regression Range: --- → yes
Has STR: --- → yes
Flags: needinfo?(mreschenberg)
Summary: [win] Profile is no longer readable with Dark OS theme → [win] Profile Manager is no longer readable with Dark OS theme
Flags: needinfo?(mreschenberg) → needinfo?(emilio)

Same issue in dialog you get when opening a .zip file; field and buttons have bad colors on dark/system theme.

And bad Restart button bg/color on "Help -> About Nightly", too.

[Tracking Requested - why for this release]: We should fix this or back out the regressor (bug 1731678) before 94 goes to beta next week, if possible.

(In reply to Daniel Holbert [:dholbert] from comment #3)

[Tracking Requested - why for this release]: We should fix this or back out the regressor (bug 1731678) before 94 goes to beta next week, if possible.

if we backout the current fix for bug 1731678, I think we should try to land the alternative CSS fix at least

This effectively reverts part of the regressing bug
(bug 1731678) temporarily.

The right fix is described in a comment:

  • Make the native Windows theme play well with dark system colors, or
  • Stop using the native Windows theme in the UI (like other browsers), or
  • Detect properly (rather than via ifdef) whether the native theme is used on
    callers to GenericDarkColor (so that we can eventually expose the colors in
    nsNativeBasicThemeWin-using documents, but not in nsThemeWin-using
    documents).

In any case, that seems at least post-freeze material, and the remaining colors
we expose still allows us to fix bug 1731678.

Assignee: nobody → emilio
Status: NEW → ASSIGNED
Flags: needinfo?(emilio)
Blocks: 1733565
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/86a10437e3e9 Expose less dark system colors on Windows for now. r=dholbert,layout-reviewers
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 94 Branch
Flags: qe-verify+

This bug seems to be reintroduced in todays (2021-10-05) Nightly build, it was fixed in yesterdays...

Limited to Nightly builds - verified on 95.0a1 (2021-10-06).
94.0b2 does not have the theme implemented yet.

Based on Comment 12, I'm marking this issue as Verified Fixed.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
Regressions: 1734767
Blocks: 1734297
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: