Bug 1733354 - Expose less dark system colors on Windows for now. r=dholbert,layout-reviewers

This effectively reverts part of the regressing bug
(bug 1731678) temporarily.

The right fix is described in a comment:

 * Make the native Windows theme play well with dark system colors, or
 * Stop using the native Windows theme in the UI (like other browsers), or
 * Detect properly (rather than via ifdef) whether the native theme is used on
   callers to GenericDarkColor (so that we can eventually expose the colors in
   nsNativeBasicThemeWin-using documents, but not in nsThemeWin-using
   documents).

In any case, that seems at least post-freeze material, and the remaining colors
we expose still allows us to fix bug 1731678.

Differential Revision: https://phabricator.services.mozilla.com/D127246